<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/com_parse_ui_vertical_margin"
    android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
    android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
    android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
    android:orientation="vertical" >

  <!--     <AutoCompleteTextView
        android:id="@+id/user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:maxLines="1"
        android:layout_below="@+id/progressBarLbl"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/volunteer_name" >

        <requestFocus />
    </AutoCompleteTextView>  -->
    
    <ListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

	<EditText
        android:id="@+id/notes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="5"
        android:ems="12"
        android:hint="@string/notes" 
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing" />
    
    
    <EditText
        android:id="@+id/student"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="12"
        android:hint="@string/student_name" 
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing" />
    
    <EditText
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/subject"
        android:inputType="text" 
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing" />
    
    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/location"
        android:inputType="text" 
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing" />
    
    <Spinner
    android:id="@+id/user"
    android:contentDescription="@string/select_volunteer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true" 
    android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing" />

    
    <Button
        android:id="@+id/datePicker" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true" 
    android:text="@string/date" 
    android:contentDescription="@string/date"
    android:onClick="showDatePickerDialog"
    android:textSize="18sp"
    android:textColor="#FFFFFFFF"
    android:background="#FF000000" 
    android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing" />

    
    <Button 
        android:id="@+id/timePicker"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/time" 
    android:contentDescription="@string/time"
    android:onClick="showTimePickerDialog" 
    android:textSize="18sp"
    android:textColor="#FFFFFFFF"
    android:background="#FF000000"
    android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing" />

</LinearLayout>