<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adarshhasija.ahelp.ContactRecordsActivity">




    <Button
        android:id="@+id/buttonNewRecord"
        android:contentDescription="@string/new_record"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF0000FF"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_record" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_records"
        android:id="@+id/textViewNoRecords"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonMonthYear"
            android:contentDescription="@string/change_date_button"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:textColor="#FFFFFFFF"
            android:background="#FF0000FF"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ListView
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:id="@+id/list"
           android:layout_centerVertical="true"
           android:layout_centerHorizontal="true" />
    </LinearLayout>


</RelativeLayout>
